--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <link rel="icon" href="https://htmldesigntemplates.com/html/royallove/images/header/favicon.png">
 
-<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" src="../css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" src="../ms/css/font-awesome.min.css">
 
 
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -21,22 +21,22 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="../css/animate.css">
-<link rel="stylesheet" type="text/css" href="../css/owl.carousel.min.css">
-<link rel="stylesheet" type="text/css" href="../css/magnific-popup.css">
-<link rel="stylesheet" type="text/css" href="../css/YTPlayer.css">
-<link rel="stylesheet" type="text/css" href="../css/animated-headlines.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/animate.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/owl.carousel.min.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/magnific-popup.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/YTPlayer.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/animated-headlines.css">
 
-<link rel="stylesheet" type="text/css" href="../css/style.css">
-<link rel="stylesheet" type="text/css" href="../css/responsive.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/style.css">
+<link rel="stylesheet" type="text/css" href="../ms/css/responsive.css">
 
-<link href="../css/plugin.css" rel="stylesheet" type="text/css">
+<link href="../ms/css/plugin.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 
-<script async="" src="../js/invisible.js.download"></script>
+<script async="" src="../ms/js/invisible.js.download"></script>
 
 </head>
 <body data-spy="scroll" data-target=".navbar-fixed-top" class="home-3">
@@ -82,8 +82,8 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-sticky-function navbar-arrow navbar-sticky-in sticky">
 <div class="container">
 <div class="logo pull-left">
-<a href="https://htmldesigntemplates.com/html/royallove/index.html"><img src="../imgs/logo-2.png" alt=""></a>
-<a href="https://htmldesigntemplates.com/html/royallove/index.html" class="sticky-logo"><img src="../imgs/logo-1.png" alt=""></a>
+<a href="https://htmldesigntemplates.com/html/royallove/index.html"><img src="../ms/imgs/logo-2.png" alt=""></a>
+<a href="https://htmldesigntemplates.com/html/royallove/index.html" class="sticky-logo"><img src="../ms/imgs/logo-1.png" alt=""></a>
 </div>
 <div id="navbar" class="navbar-nav-wrapper pull-right">
 <ul class="nav navbar-nav navbar-right" id="responsive-menu">
@@ -127,21 +127,21 @@
 
 <div class="item next left" style="transition-duration: 2000ms;">
 
-<img src="../imgs/slider-2.jpg" alt="kenburns_061_01">
+<img src="../ms/imgs/slider-2.jpg" alt="kenburns_061_01">
 
 </div>
 
 
 <div class="item" style="transition-duration: 2000ms;">
 
-<img src="../imgs/slider-3.jpg" alt="kenburns_061_02">
+<img src="../ms/imgs/slider-3.jpg" alt="kenburns_061_02">
 
 </div>
 
 
 <div class="item active left" style="transition-duration: 2000ms;">
 
-<img src="../imgs/slider-1.jpg" alt="kenburns_061_03">
+<img src="../ms/imgs/slider-1.jpg" alt="kenburns_061_03">
 
 </div>
 
@@ -173,7 +173,7 @@
 <span class="sr-only">Next</span>
 </a>
 <div class="seperator">
-<img src="../imgs/layer-5.png" alt="seperator">
+<img src="../ms/imgs/layer-5.png" alt="seperator">
 </div>
 </div> 
 </section>
@@ -188,7 +188,7 @@
 <div class="col-md-6 col-sm-12">
 <div class="the-couple wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
 <div class="couple-img pull-right">
-<img src="../imgs/1.jpg" alt="">
+<img src="../ms/imgs/1.jpg" alt="">
 <h4>The Groom</h4>
 </div>
 <div class="about-couple about-couple-1">
@@ -211,7 +211,7 @@
 <div class="col-md-6 col-sm-12">
 <div class="the-couple wow fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
 <div class="couple-img">
-<img src="../imgs/2.jpg" alt="">
+<img src="../ms/imgs/2.jpg" alt="">
 <h4>The Bride</h4>
 </div>
 <div class="about-couple">
@@ -260,7 +260,7 @@
 <div class="col-sm-6 col-xs-6">
 <div class="story-lt-rt story-rt">
 <div class="image-story">
-<img src="../imgs/story-1.jpg" alt="">
+<img src="../ms/imgs/story-1.jpg" alt="">
 </div>
 </div>
 </div>
@@ -271,7 +271,7 @@
 <div class="col-sm-6 col-xs-6">
 <div class="story-lt-rt story-lt">
 <div class="image-story">
-<img src="../imgs/story-2.jpg" alt="">
+<img src="../ms/imgs/story-2.jpg" alt="">
 </div>
 </div>
 </div>
@@ -304,7 +304,7 @@
 <div class="col-sm-6 col-xs-6">
 <div class="story-lt-rt story-rt">
 <div class="image-story">
-<img src="../imgs/story-3.jpg" alt="">
+<img src="../ms/imgs/story-3.jpg" alt="">
 </div>
 </div>
 </div>
@@ -315,7 +315,7 @@
 <div class="col-sm-6 col-xs-6">
 <div class="story-lt-rt story-lt">
 <div class="image-story">
-<img src="../imgs/story-4.jpg" alt="">
+<img src="../ms/imgs/story-4.jpg" alt="">
 </div>
 </div>
 </div>
@@ -353,7 +353,7 @@
 <div class="col-sm-6 col-xs-6">
 <div class="story-lt-rt story-rt">
 <div class="image-story">
-<img src="../imgs/story-1.jpg" alt="">
+<img src="../ms/imgs/story-1.jpg" alt="">
 </div>
 </div>
 </div>
@@ -376,7 +376,7 @@
 <div class="col-sm-6 col-xs-6">
 <div class="story-lt-rt story-rt">
 <div class="image-story">
-<img src="../imgs/story-3.jpg" alt="">
+<img src="../ms/imgs/story-3.jpg" alt="">
 </div>
 </div>
 </div>
@@ -398,7 +398,7 @@
 <div class="col-sm-6 col-xs-6">
 <div class="story-lt-rt story-lt">
 <div class="image-story">
-<img src="../imgs/story-4.jpg" alt="">
+<img src="../ms/imgs/story-4.jpg" alt="">
 </div>
 </div>
 </div>
@@ -419,7 +419,7 @@
 <div class="row">
 <div class="col-md-6 col-sm-12">
 <div class="event-img wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-<img src="../imgs/event.jpg" alt="">
+<img src="../ms/imgs/event.jpg" alt="">
 </div>
 </div>
 <div class="col-md-6 col-sm-12">
@@ -485,7 +485,7 @@
 <div class="row">
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".1s">
-<div class="team-img"> <img src="../imgs/grooms-1.png" alt="">
+<div class="team-img"> <img src="../ms/imgs/grooms-1.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -503,7 +503,7 @@
 </div>
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".2s">
-<div class="team-img"> <img src="../imgs/grooms-2.png" alt="">
+<div class="team-img"> <img src="../ms/imgs/grooms-2.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -521,7 +521,7 @@
 </div>
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".1s">
-<div class="team-img"> <img src="../imgs/grooms-3.png" alt="">
+<div class="team-img"> <img src="../ms/imgs/grooms-3.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -539,7 +539,7 @@
 </div>
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".1s">
-<div class="team-img"> <img src="../imgs/grooms-4.png" alt="">
+<div class="team-img"> <img src="../ms/imgs/grooms-4.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -561,7 +561,7 @@
 <div class="row">
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".3s">
-<div class="team-img"> <img src="../imgs/brides-1.png" alt="">
+<div class="team-img"> <img src="../ms/imgs/brides-1.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -580,7 +580,7 @@
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".4s">
 <div class="team-img">
-<img src="../imgs/brides-2.png" alt="">
+<img src="../ms/imgs/brides-2.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -599,7 +599,7 @@
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".4s">
 <div class="team-img">
-<img src="../imgs/brides-3.png" alt="">
+<img src="../ms/imgs/brides-3.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -618,7 +618,7 @@
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".4s">
 <div class="team-img">
-<img src="../imgs/brides-4.png" alt="">
+<img src="../ms/imgs/brides-4.png" alt="">
 <div class="link">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
@@ -644,14 +644,14 @@
 
 <section id="the-quote" class="the-quote layered-b section-padding">
 <div class="seperator seperator-up">
-<img src="../imgs/layer-3.png" alt="seperator">
+<img src="../ms/imgs/layer-3.png" alt="seperator">
 </div>
 <div class="black-overlay-se"></div>
 <div class="container">
 <div class="row">
 <div class="col-sm-4">
 <div class="quote-img">
-<img src="../imgs/gl-4.jpg">
+<img src="../ms/imgs/gl-4.jpg">
 </div>
 </div>
 <div class="col-sm-8 col-xs-12">
@@ -665,7 +665,7 @@
 </div>
 </div>
 <div class="seperator">
-<img src="../imgs/layer-3.png" alt="seperator">
+<img src="../ms/imgs/layer-3.png" alt="seperator">
 </div>
 </section>
 
@@ -686,7 +686,7 @@
 <div class="col-md-8 col-sm-8 col-xs-8 mix">
 <div class="item port-popup gll-wide-right">
 <a href="./gl-7.jpg" title="">
-<img src="../imgs/gl-7.jpg" alt="">
+<img src="../ms/imgs/gl-7.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
 </div>
@@ -696,7 +696,7 @@
 <div class="col-md-4 col-sm-4 col-xs-4 mix">
 <div class="item port-popup">
 <a href="./gl-9.jpg" title="">
-<img src="../imgs/gl-9.jpg" alt="">
+<img src="../ms/imgs/gl-9.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
 </div>
@@ -704,13 +704,13 @@
 <div class="col-md-4 col-sm-4 col-xs-4 mix">
 <div class="item port-popup">
 <a href="./gl-10.jpg" title="">
-<img src="../imgs/gl-10.jpg" alt="">
+<img src="../ms/imgs/gl-10.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
 </div>
 <div class="item port-popup">
 <a href="./gl-13.jpg" title="">
-<img src="../imgs/gl-13.jpg" alt="">
+<img src="../ms/imgs/gl-13.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
 </div>
@@ -718,13 +718,13 @@
 <div class="col-md-4 col-sm-4 col-xs-4 mix">
 <div class="item port-popup">
 <a href="./gl-11.jpg" title="">
-<img src="../imgs/gl-11.jpg" alt="">
+<img src="../ms/imgs/gl-11.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
 </div>
 <div class="item port-popup">
 <a href="./gl-12.jpg" title="">
-<img src="../imgs/gl-12.jpg" alt="">
+<img src="../ms/imgs/gl-12.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
 </div>
@@ -734,7 +734,7 @@
 <div class="col-md-8 col-sm-8 col-xs-8 mix">
 <div class="item port-popup gll-wide-right">
 <a href="./gl-8.jpg" title="">
-<img src="../imgs/gl-8.jpg" alt="">
+<img src="../ms/imgs/gl-8.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
 </div>
@@ -753,7 +753,7 @@
 
 <section id="the-wishes" class="the-wishes grunge section-padding">
 <div class="seperator seperator-up">
-<img src="../imgs/layer-3.png" alt="seperator">
+<img src="../ms/imgs/layer-3.png" alt="seperator">
 </div>
 <div class="container">
 <div class="wish-titles wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
@@ -766,7 +766,7 @@
 <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 4600px;"><div class="owl-item active" style="width: 1140px; margin-right: 10px;"><div class="item">
 <div class="testimony-slide active text-center">
 <figure>
-<img src="../imgs/grooms-1.png" alt="user">
+<img src="../ms/imgs/grooms-1.png" alt="user">
 </figure>
 <span class="white">Mark Alamin</span>
 <blockquote>
@@ -776,7 +776,7 @@
 </div></div><div class="owl-item" style="width: 1140px; margin-right: 10px;"><div class="item">
 <div class="testimony-slide active text-center">
 <figure>
-<img src="../imgs/grooms-2.png" alt="user">
+<img src="../ms/imgs/grooms-2.png" alt="user">
 </figure>
 <span class="white">John Clyne</span>
 <blockquote>
@@ -786,7 +786,7 @@
 </div></div><div class="owl-item" style="width: 1140px; margin-right: 10px;"><div class="item">
 <div class="testimony-slide active text-center">
 <figure>
-<img src="../imgs/brides-1.png" alt="user">
+<img src="../ms/imgs/brides-1.png" alt="user">
 </figure>
 <span class="white">Joey Foster</span>
 <blockquote>
@@ -796,7 +796,7 @@
 </div></div><div class="owl-item" style="width: 1140px; margin-right: 10px;"><div class="item">
 <div class="testimony-slide active text-center">
 <figure>
-<img src="../imgs/brides-2.png" alt="user">
+<img src="../ms/imgs/brides-2.png" alt="user">
 </figure>
 <span class="white">Taylor Queen</span>
 <blockquote>
@@ -808,7 +808,7 @@
 </div>
 <div class="black-overlay-se"></div>
 <div class="seperator">
-<img src="../imgs/layer-3.png" alt="seperator">
+<img src="../ms/imgs/layer-3.png" alt="seperator">
 </div>
 </section>
 
@@ -874,7 +874,7 @@
 <div class="col-sm-4">
 <div class="blog-col wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
 <div class="blog-img">
-<img src="../imgs/blog-4.jpg" alt="">
+<img src="../ms/imgs/blog-4.jpg" alt="">
 </div>
 <div class="blog-content">
 <h4><a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html">Our Wedding Story</a></h4>
@@ -891,7 +891,7 @@
 <div class="col-sm-4">
 <div class="blog-col wow fadeIn" data-wow-duration="2s" style="visibility: visible; animation-duration: 2s; animation-name: fadeIn;">
 <div class="blog-img">
-<img src="../imgs/blog-5.jpg" alt="">
+<img src="../ms/imgs/blog-5.jpg" alt="">
 </div>
 <div class="blog-content">
 <h4><a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html">Our Wedding Story</a></h4>
@@ -908,7 +908,7 @@
 <div class="col-sm-4">
 <div class="blog-col wow fadeIn" data-wow-duration="2s" style="visibility: visible; animation-duration: 2s; animation-name: fadeIn;">
 <div class="blog-img">
-<img src="../imgs/blog-6.jpg" alt="">
+<img src="../ms/imgs/blog-6.jpg" alt="">
 </div>
 <div class="blog-content">
 <h4><a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html">Our Wedding Story</a></h4>
@@ -950,50 +950,50 @@
 </footer>
 
 
-<script src="../js/jquery.min.js.download"></script>
+<script src="../ms/js/jquery.min.js.download"></script>
 
-<script src="../js/bootstrap.min.js.download"></script>
+<script src="../ms/js/bootstrap.min.js.download"></script>
 
-<script src="../js/owl.carousel.min.js.download"></script>
+<script src="../ms/js/owl.carousel.min.js.download"></script>
 
-<script src="../js/swiper.js.download"></script>
+<script src="../ms/js/swiper.js.download"></script>
 
-<script src="../js/SmoothScroll.js.download"></script>
+<script src="../ms/js/SmoothScroll.js.download"></script>
 
-<script src="../js/jquery.easypiechart.min.js.download"></script>
+<script src="../ms/js/jquery.easypiechart.min.js.download"></script>
 
-<script src="../js/jquery.inview.min.js.download"></script>
+<script src="../ms/js/jquery.inview.min.js.download"></script>
 
-<script src="../js/jquery.magnific-popup.min.js.download"></script>
+<script src="../ms/js/jquery.magnific-popup.min.js.download"></script>
 
-<script src="../js/jquery.mixitup.js.download"></script>
+<script src="../ms/js/jquery.mixitup.js.download"></script>
 
-<script src="../js/jquery.counterup.min.js.download"></script>
+<script src="../ms/js/jquery.counterup.min.js.download"></script>
 
-<script src="../js/animated-headlines.js.download"></script>
+<script src="../ms/js/animated-headlines.js.download"></script>
 
-<script src="../js/jquery.waypoints.min.js.download"></script>
+<script src="../ms/js/jquery.waypoints.min.js.download"></script>
 
-<script src="../js/jquery.countdown.min.js.download"></script>
+<script src="../ms/js/jquery.countdown.min.js.download"></script>
 
-<script src="../js/jquery.nav.js.download"></script>
+<script src="../ms/js/jquery.nav.js.download"></script>
 
-<script src="../js/jquery.easing.min.js.download"></script>
+<script src="../ms/js/jquery.easing.min.js.download"></script>
 
-<script src="../js/slick.js.download"></script>
+<script src="../ms/js/slick.js.download"></script>
 
-<script src="../js/slicknav.js.download"></script>
+<script src="../ms/js/slicknav.js.download"></script>
 
-<script src="../js/custom-nav.js.download"></script>
+<script src="../ms/js/custom-nav.js.download"></script>
 
-<script src="../js/jquery.touchSwipe.min.js.download"></script>
+<script src="../ms/js/jquery.touchSwipe.min.js.download"></script>
 
-<script src="../js/paradise_slider_min.js.download"></script>
+<script src="../ms/js/paradise_slider_min.js.download"></script>
 
-<script src="../js/wow.min.js.download"></script>
+<script src="../ms/js/wow.min.js.download"></script>
 
-<script src="../js/custom.timer.js.download"></script>
+<script src="../ms/js/custom.timer.js.download"></script>
 
-<script src="../js/custom.js.download"></script>
+<script src="../ms/js/custom.js.download"></script>
 <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6b940a264be15f9b',m:'HZmM3cgZqN2MRx9mj1YlcgERdqSIoi_iaBRiBxLVmzI-1638778246-0-AcAyqFJxsz5JqDp2t0fsDkOp20gUcBhS6jvMBP9WghfpQc5LyuvfuY+gkLLmID4bJRTHrL8KTTWwvaAkUDKvWxV0rmzcPWJX9o+hW6KCLIYblQisLyYDtesdLIL9oYLSCQ==',s:[0xadebc9a932,0x7de5dc56a5],u:'/cdn-cgi/challenge-platform/h/g'}})();</script>
 <div id="scrollup" style="display: block;"><i class="fa fa-angle-up"></i></div></body></html>
