--- a/index.html
+++ b/index.html
@@ -927,8 +927,8 @@
 </section>
 
 
-<footer id="footer" class="footer-widgets" style="background-image:url('C:\\Users\\sri lakshmi\\Documents\\footer-couple.png')">
-<div class="footer-note" style="background-image:url('C:\\Users\\sri lakshmi\\Documents\\footer-c.png');background-repeat:no-repeat;background-position-x: center;background-position-y: center;background-repeat-x: no-repeat;background-repeat-y: no-repeat;">
+<footer id="footer" class="footer-widgets" style="background-image:url('../ms/imgs/footer-couple.png')">
+<div class="footer-note" style="background-image:url('../ms/imgs/footer-c.png');background-repeat:no-repeat;background-position-x: center;background-position-y: center;background-repeat-x: no-repeat;background-repeat-y: no-repeat;">
 	<h1>Thank You</h1>
 	<p>Mahendra &amp; Srilekha</p>
 </div>
