--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <div class="col-md-6 col-sm-12">
 <div class="the-couple wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
 <div class="couple-img pull-right">
-<img src="../ms/imgs/1.jpg" alt="">
+<img src="../ms/imgs/Mahi-1.jpeg" alt="">
 <h4>The Groom</h4>
 </div>
 <div class="about-couple about-couple-1">
