--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <div class="col-md-6 col-sm-12">
 <div class="the-couple wow fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
 <div class="couple-img">
-<img src="../ms/imgs/2.jpg" alt="">
+<img src="../ms/imgs/sri-1.jpeg" alt="">
 <h4>The Bride</h4>
 </div>
 <div class="about-couple">
