--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <h4>The Groom</h4>
 </div>
 <div class="about-couple about-couple-1">
-<h4>Mahendra Gadiparthi</h4>
+<h3>Mahendra G</h3>
 <div class="cp-social">
 <ul>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
