--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
 <h3>The Reception</h3>
 <div class="event-title">
 <ul>
-<li><i class="fa fa-map-marker"></i> Queens, New York</li>
-<li><i class="fa fa-calendar-check-o"></i> Sept 10, 2019</li>
-<li><i class="fa fa-clock-o"></i> 10 AM to 6 PM</li>
+<li><i class="fa fa-map-marker"></i> Muthanapalli, AP</li>
+<li><i class="fa fa-calendar-check-o"></i> Feb 10, 2022</li>
+<li><i class="fa fa-clock-o"></i> 6 AM to 8 PM</li>
 </ul>
 </div>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis impedit expedita, deleniti culpa nam fuga neque ab similique corporis. Sed eligendi perspiciatis error ipsam culpa.</p>
