--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <div class="top-bar-right">
 <div class="social-link-t">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-youtube"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-youtube"></i></a></li>
 </ul>
 </div>
 </div>
@@ -82,13 +82,13 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-sticky-function navbar-arrow navbar-sticky-in sticky">
 <div class="container">
 <div class="logo pull-left">
-<a href="https://htmldesigntemplates.com/html/royallove/index.html"><img src="../ms/imgs/logo-2.png" alt=""></a>
-<a href="https://htmldesigntemplates.com/html/royallove/index.html" class="sticky-logo"><img src="../ms/imgs/logo-1.png" alt=""></a>
+<a href="https://javamahendra.github.io/ms"><img src="../ms/imgs/logo-2.png" alt=""></a>
+<a href="https://javamahendra.github.io/ms" class="sticky-logo"><img src="../ms/imgs/logo-1.png" alt=""></a>
 </div>
 <div id="navbar" class="navbar-nav-wrapper pull-right">
 <ul class="nav navbar-nav navbar-right" id="responsive-menu">
 <li class="active">
-<a href="https://htmldesigntemplates.com/html/royallove/#">Home <!-- <i class="fa fa-angle-down"></i> --></a>
+<a href="https://javamahendra.github.io/ms">Home <!-- <i class="fa fa-angle-down"></i> --></a>
 
 </li>
 
@@ -101,9 +101,9 @@
 </div>
 </div>
 </div>
-<div id="slicknav-mobile"><div class="slicknav_menu"><a href="https://htmldesigntemplates.com/html/royallove/#" aria-haspopup="true" tabindex="0" class="slicknav_btn slicknav_collapsed" style="outline: none;"><span class="slicknav_menutxt"></span><span class="slicknav_icon slicknav_no-text"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a><ul class="slicknav_nav slicknav_hidden" aria-hidden="true" role="menu" style="display: none;">
-<li class="active slicknav_collapsed slicknav_parent"><a href="https://htmldesigntemplates.com/html/royallove/#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row" style="outline: none;">
-<a href="https://htmldesigntemplates.com/html/royallove/#" tabindex="-1">Home <i class="fa fa-angle-down"></i></a>
+<div id="slicknav-mobile"><div class="slicknav_menu"><a href="https://javamahendra.github.io/ms/#" aria-haspopup="true" tabindex="0" class="slicknav_btn slicknav_collapsed" style="outline: none;"><span class="slicknav_menutxt"></span><span class="slicknav_icon slicknav_no-text"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a><ul class="slicknav_nav slicknav_hidden" aria-hidden="true" role="menu" style="display: none;">
+<li class="active slicknav_collapsed slicknav_parent"><a href="https://javamahendra.github.io/ms/#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row" style="outline: none;">
+<a href="https://javamahendra.github.io/ms/#" tabindex="-1">Home <i class="fa fa-angle-down"></i></a>
 <span class="slicknav_arrow"><i class="fa fa-plus"></i></span></a><ul role="menu" class="slicknav_hidden" aria-hidden="true" style="display: none;">
 </ul>
 </li>
@@ -163,12 +163,12 @@
 </div>
 </div>
 
-<a class="left carousel-control" href="https://htmldesigntemplates.com/html/royallove/#kenburns_061" role="button" data-slide="prev">
+<a class="left carousel-control" href="https://javamahendra.github.io/ms/#kenburns_061" role="button" data-slide="prev">
 <span><i class="fa fa-angle-left"></i></span>
 <span class="sr-only">Previous</span>
 </a>
 
-<a class="right carousel-control" href="https://htmldesigntemplates.com/html/royallove/#kenburns_061" role="button" data-slide="next">
+<a class="right carousel-control" href="https://javamahendra.github.io/ms/#kenburns_061" role="button" data-slide="next">
 <span><i class="fa fa-angle-right"></i></span>
 <span class="sr-only">Next</span>
 </a>
@@ -195,9 +195,9 @@
 <h3>Mahendra G</h3>
 <div class="cp-social">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
 </ul>
 </div>
 <div class="cp-detail">
@@ -218,9 +218,9 @@
 <h3>Srilekha Turlapati</h3>
 <div class="cp-social">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
 </ul>
 </div>
 <div class="cp-detail">
@@ -477,8 +477,8 @@
 </div>
 <div class="important-people">
 <ul class="nav nav-tabs">
-<li class="active"><a data-toggle="tab" href="https://htmldesigntemplates.com/html/royallove/#groom">Groomsmen</a></li>
-<li><a data-toggle="tab" href="https://htmldesigntemplates.com/html/royallove/#bride">Bridesmaid</a></li>
+<li class="active"><a data-toggle="tab" href="https://javamahendra.github.io/ms/#groom">Groomsmen</a></li>
+<li><a data-toggle="tab" href="https://javamahendra.github.io/ms/#bride">Bridesmaid</a></li>
 </ul>
 <div class="tab-content">
 <div id="groom" class="tab-pane fade in active">
@@ -488,10 +488,10 @@
 <div class="team-img"> <img src="../ms/imgs/grooms-1.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
-<li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
+<li class="insta"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
 </div>
 </div>
@@ -506,10 +506,10 @@
 <div class="team-img"> <img src="../ms/imgs/grooms-2.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
-<li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
- <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
+<li class="insta"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+ <li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
 </div>
 </div>
@@ -524,10 +524,10 @@
 <div class="team-img"> <img src="../ms/imgs/grooms-3.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
-<li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
+<li class="insta"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
 </div>
 </div>
@@ -542,10 +542,10 @@
 <div class="team-img"> <img src="../ms/imgs/grooms-4.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
-<li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
+<li class="insta"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
 </div>
 </div>
@@ -564,10 +564,10 @@
 <div class="team-img"> <img src="../ms/imgs/brides-1.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
-<li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
+<li class="insta"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
 </div>
 </div>
@@ -583,10 +583,10 @@
 <img src="../ms/imgs/brides-2.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
-<li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
+<li class="insta"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
 </div>
 </div>
@@ -602,8 +602,8 @@
 <img src="../ms/imgs/brides-3.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
 <li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
 <li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
@@ -621,10 +621,10 @@
 <img src="../ms/imgs/brides-4.png" alt="">
 <div class="link">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook"></i></a></li>
-<li class="gplus"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-google-plus"></i></a></li>
-<li class="insta"><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
+<li class="gplus"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-google-plus"></i></a></li>
+<li class="insta"><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter"></i></a></li>
 </ul>
 </div>
 </div>
@@ -877,11 +877,11 @@
 <img src="../ms/imgs/blog-4.jpg" alt="">
 </div>
 <div class="blog-content">
-<h4><a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html">Our Wedding Story</a></h4>
+<h4><a href="https://javamahendra.github.io/ms">Our Wedding Story</a></h4>
 <div class="info-bar">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-tag"></i>ceremony,</a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-calendar"></i>October 21, 2018</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-tag"></i>ceremony,</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>October 21, 2018</a></li>
 </ul>
 </div>
 <p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
@@ -894,11 +894,11 @@
 <img src="../ms/imgs/blog-5.jpg" alt="">
 </div>
 <div class="blog-content">
-<h4><a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html">Our Wedding Story</a></h4>
+<h4><a href="https://javamahendra.github.io/ms">Our Wedding Story</a></h4>
 <div class="info-bar">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-tag"></i>Wedding,</a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-calendar"></i>September 1, 2019</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-tag"></i>Wedding,</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>September 1, 2019</a></li>
 </ul>
 </div>
 <p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
@@ -911,11 +911,11 @@
 <img src="../ms/imgs/blog-6.jpg" alt="">
 </div>
 <div class="blog-content">
-<h4><a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html">Our Wedding Story</a></h4>
+<h4><a href="https://javamahendra.github.io/ms">Our Wedding Story</a></h4>
 <div class="info-bar">
 <ul>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-tag"></i>Event,</a></li>
-<li><a href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-calendar"></i>August 12, 2019</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-tag"></i>Event,</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>August 12, 2019</a></li>
 </ul>
 </div>
 <p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
@@ -938,9 +938,9 @@
 <div class="col-sm-6 col-sm-offset-3">
 <p class="para">The best gift is your praticipation, thanks to all </p>
 <ul class="social-media">
-<li><a class="facebook" href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-<li><a class="linkedin" href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-<li><a class="twitter" href="https://htmldesigntemplates.com/html/royallove/#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+<li><a class="facebook" href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+<li><a class="linkedin" href="https://javamahendra.github.io/ms/#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+<li><a class="twitter" href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 </ul>
 <p> Copyright @ 2021 Powred by <a href="#">Java Tech sols</a> All Rights Reserved. </p>
 </div>
