--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 <div class="row drop-left">
 <div class="col-md-4 col-sm-4 col-xs-4 mix">
 <div class="gallery-quote">
-<h2>Srilekha</h2>
+<h2>Srilekha Turlapati</h2>
 </div>
 </div>
 <div class="col-md-8 col-sm-8 col-xs-8 mix">
@@ -741,7 +741,7 @@
 </div>
 <div class="col-md-4 col-sm-4 col-xs-4 mix">
 <div class="gallery-quote">
-<h2>Mahendra</h2>
+<h2>Mahendra Gadiparthi</h2>
 </div>
 </div>
 </div>
