--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 </div>
 <div class="cp-detail">
 
-<p>Java Developer, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>-->
+<p>Senior System Engineer #Java Developer & Web Developer @TATA Consultancy Service.</p>
+
 </div>
 </div>
 </div>
