--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </ul>
 </div>
 <div class="cp-detail">
-<p>Medical Coder #Medical Coding @United Health Group (optnum)</p>
+<p>Medical Coder #Medical Coding & Analyst @United Health Group (optnum)</p>
 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>-->
 </div>
 </div>
