--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
 <div class="expand-story">
 <div class="story-head wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
 <h3>How we first met</h3>
-<h6>02 Feb 2022</h6>
+<h6>21 Nov 2021</h6>
 </div>
-<p class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">Lorem ipsum dolor sit amet,consectetur adipiing elit. Morbi nec con vallis ipsum,et pharlorraesent dignissim viverra metus. Lorem ipsum dolor sit.</p>
+<p class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">For the first time we met in the bridal glance by sitting infront of each other.</p>
 </div>
 </div>
 </div>
