--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <h3>Engagement</h3>
 <h6>02 Feb 2022</h6>
 </div>
-<p class="wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;">Lorem ipsum dolor sit amet,consectetur adipiing elit. Morbi nec con vallis ipsum,et pharlorraesent dignissim viverra metus. Lorem ipsum dolor sit.</p>
+<p class="wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;">This is the moment at which we are engaged and we officially fixed and announced our wedding date.</p>
 </div>
 </div>
 </div>
