--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <li><i class="fa fa-clock-o"></i> 6 AM to 8 PM</li>
 </ul>
 </div>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis impedit expedita, deleniti culpa nam fuga neque ab similique corporis. Sed eligendi perspiciatis error ipsam culpa.</p>
+<p>This is the place where our first appearance as a couple together to recieve all your blessings.</p>
 <button type="button" class="open-btn" data-toggle="modal" data-target="#myModal">See Location <i class="fa fa-caret-right"></i></button>
 </div>
 <div class="event-stack wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
