--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 </ul>
 </div>
 <div class="cp-detail">
-<p>Medical Coder #Certified Professional Coder (CPC) & Analyst @United Health Group (optnum)</p>
-<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>-->
+<p>Medical Coder #Certified Professional Coder (CPC) & Analyst @United Health Group UHG (optum)</p>
+
 </div>
 </div>
 </div>
