--- a/index.html
+++ b/index.html
@@ -757,9 +757,6 @@ I have thought about it several times, of how our life would be beautiful if we 
 <h2>Friends Wishes</h2>
 <div class="owl-carousel wishes-owl owl-theme owl-loaded owl-drag">
 
-
-
-
 <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 4600px;"><div class="owl-item active" style="width: 1140px; margin-right: 10px;"><div class="item">
 <div class="testimony-slide active text-center">
 <figure>
@@ -820,7 +817,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <div class="col-md-12">
 <div class="latest-posts-widget widget widget-rsvp wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
 <div class="ft-about-content">
-<h4 class="widget-title cursive">Please reserve before Jan 02, 2019</h4>
+<h4 class="widget-title cursive">Please reserve before Feb 09, 2022</h4>
 <form>
 <div class="col col-sm-12">
 <input type="text" class="form-control" placeholder="Your name">
@@ -895,7 +892,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <div class="info-bar">
 <ul>
 <li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-tag"></i>Wedding,</a></li>
-<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>September 1, 2019</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>Feb 10, 2022</a></li>
 </ul>
 </div>
 <p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
@@ -912,7 +909,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <div class="info-bar">
 <ul>
 <li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-tag"></i>Event,</a></li>
-<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>August 12, 2019</a></li>
+<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>Feb 10, 2022</a></li>
 </ul>
 </div>
 <p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
@@ -939,7 +936,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <li><a class="linkedin" href="https://javamahendra.github.io/ms/#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 <li><a class="twitter" href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 </ul>
-<p> Copyright @ 2021 Powred by <a href="#">Java Tech sols</a> All Rights Reserved. </p>
+<p> Copyright @ 20221 Powred by <a href="#">Java Tech sols, IT Wings & @Java Techies Technology Partner</a> All Rights Reserved. </p>
 </div>
 </div>
 </div>
