--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!-- saved from url=(0047)https://htmldesigntemplates.com/html/royallove/ -->
+<!-- saved from Technology Partner Java Tech sols, url=(9090) https://github.com/javamahendra/ms -->
+<!-- Best user Experience Using Desktop Browsers -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mahi weds sri</title>
-<link rel="icon" href="https://htmldesigntemplates.com/html/royallove/images/header/favicon.png">
+<link rel="icon" href="../ms/imgs/favicon.png">
 
 <link rel="stylesheet" type="text/css" href="../ms/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../ms/css/font-awesome.min.css">
@@ -30,7 +30,6 @@
 <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 
 <script async="" src="../ms/js/invisible.js.download"></script>
-
 </head>
 <body data-spy="scroll" data-target=".navbar-fixed-top" class="home-3">
 
@@ -42,7 +41,6 @@
 <div class="css-heart heart4"></div>
 </div>
 </div>
-
 
 <header id="inner-navigation">
 <div class="top-head top-home-3">
