--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
 <h3>Proposal</h3>
 <h6>02 Feb 2022</h6>
 </div>
-<p class="wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">Lorem ipsum dolor sit amet,consectetur adipiing elit. Morbi nec con vallis ipsum,et pharlorraesent dignissim viverra metus. Lorem ipsum dolor sit.</p>
+<p class="wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">Life would be beautiful if we spend it together…
+
+I have thought about it several times, of how our life would be beautiful if we can spend it together forever. I feel that you are truly the girl that is made for me, and I’m also the man that is made for you. We are both compatible with each other, every moment that I am going to spend with you will be the best moment of my life, I promise to be there for you every single moment of your life, I will be by your side. However, right now all that I’m asking you is a beautiful token of my heart, will you marry me?.</p>
 </div>
 </div>
 </div>
