--- a/index.html
+++ b/index.html
@@ -287,9 +287,7 @@
 <h3>Proposal</h3>
 <h6>02 Feb 2022</h6>
 </div>
-<p class="wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-Life would be beautiful if we spend it together…
-
+<p class="wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">Life would be beautiful if we spend it together…
 I have thought about it several times, of how our life would be beautiful if we can spend it together forever. I feel that you are truly the girl that is made for me, and I’m also the man that is made for you. We are both compatible with each other, every moment that I am going to spend with you will be the best moment of my life, I promise to be there for you every single moment of your life, I will be by your side. However, right now all that I’m asking you is a beautiful token of my heart, will you marry me?.</p>
 </div>
 </div>
@@ -362,9 +360,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <h3>Proposal</h3>
 <h6>02 Feb 2022</h6>
 </div>
-<p class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">
-	Life would be beautiful if we spend it together…
-
+<p class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">Life would be beautiful if we spend it together…
 I have thought about it several times, of how our life would be beautiful if we can spend it together forever. I feel that you are truly the girl that is made for me, and I’m also the man that is made for you. We are both compatible with each other, every moment that I am going to spend with you will be the best moment of my life, I promise to be there for you every single moment of your life, I will be by your side. However, right now all that I’m asking you is a beautiful token of my heart, will you marry me?	
 </p>
 </div>
