--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <li><a class="linkedin" href="https://javamahendra.github.io/ms/#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 <li><a class="twitter" href="https://javamahendra.github.io/ms/#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 </ul>
-<p> Copyright @ 20221 Powred by <a href="#">Java Tech sols, IT Wings & @Java Techies Technology Partner</a> All Rights Reserved. </p>
+<p> Copyright @ 2022 Powred by <a href="https://javamahendra.github.io/ms/">Java Tech sols, @Java Techies IT Wings is Technology Partner</a> All Rights Reserved. </p>
 </div>
 </div>
 </div>
