--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <h4 class="modal-title">Location</h4>
 </div>
 <div class="modal-body">
-<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Muthanapalli&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+<div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=Muthanapalli&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
 </div>
 </div>
 </div>
@@ -870,11 +870,11 @@ I have thought about it several times, of how our life would be beautiful if we 
 <h4><a href="https://javamahendra.github.io/ms">Our Wedding Story</a></h4>
 <div class="info-bar">
 <ul>
-<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-tag"></i>ceremony,</a></li>
-<li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>October 21, 2018</a></li>
+<li><a href="https://javamahendra.github.io/ms"><i class="fa fa-tag"></i>ceremony,</a></li>
+<li><a href="https://javamahendra.github.io/ms"><i class="fa fa-calendar"></i>October 21, 2018</a></li>
 </ul>
 </div>
-<p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
+<p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://javamahendra.github.io/ms" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
 </div>
 </div>
 </div>
@@ -908,7 +908,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>Feb 10, 2022</a></li>
 </ul>
 </div>
-<p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
+<p>Eu ferri brute mentitum vel.  pro</p> <a href="#" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
 </div>
 </div>
 </div>
