--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 </div>
 <div class="col-md-8 col-sm-8 col-xs-8 mix">
 <div class="item port-popup gll-wide-right">
-<a href="./gl-7.jpg" title="">
+<a href="#" title="">
 <img src="../ms/imgs/gl-7.jpg" alt="">
 <i class="fa fa-search"></i>
 </a>
@@ -688,16 +688,16 @@ I have thought about it several times, of how our life would be beautiful if we 
 </div>
 <div class="col-md-4 col-sm-4 col-xs-4 mix">
 <div class="item port-popup">
-<a href="./gl-9.jpg" title="">
-<img src="../ms/imgs/gl-9.jpg" alt="">
+<a href="#" title="">
+<img src="../ms/imgs/s1.jpeg" alt="sri-1" style="width:655px;">
 <i class="fa fa-search"></i>
 </a>
 </div>
 </div>
 <div class="col-md-4 col-sm-4 col-xs-4 mix">
 <div class="item port-popup">
-<a href="./gl-10.jpg" title="">
-<img src="../ms/imgs/gl-10.jpg" alt="">
+<a href="#" title="">
+<img src="../ms/imgs/Mahi-2.jpeg" alt="Mahi-2" style="width: 380px; height: 424px;">
 <i class="fa fa-search"></i>
 </a>
 </div>
