--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <li><i class="fa fa-clock-o"></i> 9.17 PM</li>
 </ul>
 </div>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis impedit expedita, deleniti culpa nam fuga neque ab similique corporis. Sed eligendi perspiciatis error ipsam culpa.</p>
+<p>A marraiage made in heaven, celebrating on Earth Together with our families, we request the honor of your presence.</p>
 <button type="button" class="open-btn" data-toggle="modal" data-target="#myModal">See Location <i class="fa fa-caret-right"></i></button>
 </div>
 </div>
