--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <p class="white">"A wedding wish for two special person: love is best when shared by two. You know that together you are stronger, together you are one. Have a wonderful married life!"</p>
 </blockquote>
  </div>
-</div></div></div></div><div class="owl-nav"><button type="button" role="presentation" class="owl-prev disabled"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div><div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button></div></div>
+</div></div></div></div><div class="owl-nav"><!--<button type="button" role="presentation" class="owl-prev disabled"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div><div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button>--></div></div>
 </div>
 </div>
 <div class="black-overlay-se"></div>
