--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <h3>Wedding Party</h3>
 <div class="event-title">
 <ul>
-<li><i class="fa fa-map-marker"></i> MUthanapalli, Andhra Pradesh</li>
+<li><i class="fa fa-map-marker"></i> Muthanapalli, Andhra Pradesh</li>
 <li><i class="fa fa-calendar-check-o"></i> Feb 10, 2020</li>
 <li><i class="fa fa-clock-o"></i> 9.17 PM</li>
 </ul>
@@ -891,7 +891,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 <li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-calendar"></i>Feb 10, 2022</a></li>
 </ul>
 </div>
-<p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://htmldesigntemplates.com/html/royallove/blog-detail.html" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
+<p>Eu ferri brute mentitum vel. Pro oporteat perseq menandri deterruisset ei mei. An omnium fuisset oporteat An omnium fuisset pro</p> <a href="https://javamahendra.github.io/ms" class="read-btn">Read more <i class="fa fa-caret-right"></i></a>
 </div>
 </div>
 </div>
