--- a/index.html
+++ b/index.html
@@ -756,9 +756,9 @@ I have thought about it several times, of how our life would be beautiful if we 
 <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 4600px;"><div class="owl-item active" style="width: 1140px; margin-right: 10px;"><div class="item">
 <div class="testimony-slide active text-center">
 <figure>
-<img src="../ms/imgs/grooms-1.png" alt="user">
+<img src="../ms/imgs/s4.jpeg" alt="s4">
 </figure>
-<span class="white">Mark Alamin</span>
+<span class="white">Friends Wishes</span>
 <blockquote>
 <p class="white">"With warm congratulations to a very special pair. May you always find in each other the love, laughter and happiness that only partners in life share!"</p>
 </blockquote>
