--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ I have thought about it several times, of how our life would be beautiful if we 
 </div>
 <div class="col-xs-6 col-sm-6 col-md-3">
 <div class="our-team" data-wow-duration="2s" data-wow-delay=".1s">
-<div class="team-img"> <img src="../ms/imgs/s5.jpeg" alt="s5">
+<div class="team-img"> <img src="../ms/imgs/as1.jpeg" alt="s5">
 <div class="link">
 <ul>
 <li><a href="https://javamahendra.github.io/ms/#"><i class="fa fa-facebook"></i></a></li>
